fixed align portfolio left box

--- a/src/sass/components/_portfolio.scss
+++ b/src/sass/components/_portfolio.scss
@@ -19,6 +19,8 @@
 
     @include respond(phone) {
       justify-content: flex-end;
+      align-items: center;
+      text-align: center;
     }
 
     & button {
